syntax = "proto3";

import "google/protobuf/empty.proto";
import "rococo-common.proto";

package timofeyqa.grpc.rococo;

option java_multiple_files = true;
option java_package = "timofeyqa.grpc.rococo";
option java_outer_classname = "RococoArtistProto";

service RococoArtistService {
  rpc GetArtist (Uuid) returns (Artist);
  rpc GetArtistPage (Pageable) returns (PageArtistResponse);
  rpc GetArtistsByUuids (UuidList) returns (ArtistList);
  rpc UpdateArtist(Artist) returns (Artist);
}

message Artist {
  string id = 1;
  string name = 2;
  string biography = 3;
  bytes photo = 4;
}

message PageArtistResponse {
  repeated Artist artists = 1;
  int64 total_elements = 2;
  int32 total_pages = 3;
}

message ArtistList {
  repeated Artist artists = 1;
}